Improve names of plain JS objects in heap snapshots
Plain JavaScript objects currently show up in heap snapshots as
'Object'. This CL generates names for them based on the properties they
contain, so that an object's name might look like
'{firstProperty, secondProperty, ..., ninthProperty, tenthProperty}'.
This can help users to tell objects apart more easily when looking at a
big list of them. This CL does not affect the categorization of those
objects in the Summary or Comparison views; they are still in a single
category named 'Object'.

Bug: 356183770
Change-Id: I787ec97b4201f786af38d2534b812d49966794a2
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5786586
Reviewed-by: Simon Zünd <szuend@chromium.org>
Commit-Queue: Seth Brenith <seth.brenith@microsoft.com>

--- a/test/e2e/resources/memory/ignoring-retainers.html
+++ b/test/e2e/resources/memory/ignoring-retainers.html
@@ -12,5 +12,22 @@
   var secondKey = {p: {q: {}}};
   weakMap.set(firstKey, firstRetainer.x);
   weakMap.set(secondKey.p.q, firstRetainer.x);
-  var lastRetainer = {a: {b: {c: {d: firstRetainer.x}}}};
+  // Some additional properties are included in the following object so that
+  // this test case can also serve to verify the formatting of plain JS objects.
+  var lastRetainer = {
+    a: {
+      b: {
+        ['#'.repeat(130)]: 2,
+        c: {
+          d: firstRetainer.x
+        }
+      },
+      irrelevantProperty: 3,
+      [Symbol('also irrelevant')]: 4,
+      '}': 5
+    }
+  };
+  for (var i = 0; i < 10; ++i) {
+    lastRetainer['extraProp' + i] = i;
+  }
 </script>
