Allow searching for synthetic names in heap snapshots
Currently, if you press ctrl-f in a heap snapshot and type
"concatenated", you'll find a bunch of search results that don't
actually include the word "concatenated", but are of type "(concatenated
string)". This result breaks the principle of least surprise: the search
box should find results according to the text displayed on the screen
for each object. The problem is that for some objects (for concatenated
strings since forever, and for plain JS Objects since recently), the
name displayed on the screen is synthesized on demand and doesn't match
the object's name in the original snapshot data. Thus, the search
feature should look for matches in these synthetic names rather than the
raw names from the snapshot.

This change brings up another problem: if we iterate every node in the
snapshot calling name() on them, then we'll fill up the lazyStringCache
with synthetic names, at a large memory cost. I think that this cache is
not actually gaining us much, since the frontend usually only requests
100 names at a time, and the worker thread can easily synthesize 100
names without any noticeable delay. To avoid high memory usage, this CL
removes the lazyStringCache.

Bug: 356183770
Change-Id: I339251a96ee45bd3e8e1dbb150a56163dd17d6f1
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5791924
Commit-Queue: Seth Brenith <seth.brenith@microsoft.com>
Reviewed-by: Simon Zünd <szuend@chromium.org>

--- a/test/e2e/resources/memory/attached-iframe.html
+++ b/test/e2e/resources/memory/attached-iframe.html
@@ -6,8 +6,11 @@
 <h1>Memory Panel (Heap profiler) Test</h1>
 <script>
   var frame = document.createElement('iframe');
+  // Use concatenation to create the string to search for, so that this test can
+  // also verify that searching works on concatenated strings.
   frame.src = 'data:text/html,<script>class Retainer{}; var aUniqueName = new Retainer();'+
-                    'aUniqueName.prop=\'searchable string\';<' +
+                    'aUniqueName.prop=\'               searchable \';' +
+                    'aUniqueName.prop+=\'string                   \';<' +
                     '/script>';
   document.body.appendChild(frame);
   frame.addEventListener("load", function() {
