Rewrite `shows styles from injected user stylesheets` test
The test was failing on mac-arm64. This commit attempts to fix it by:
- Using `waitForAndClickTreeElementWithPartialText` to select tree elements.
- Splitting the test into 2 tests to reduce latency.
- Replacing JavaScript function calls with TypeScript.

Bug: 362505638
Change-Id: I8ab08f804d4077499f17e2448e03ca5c77907854
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5844613
Reviewed-by: Eric Leese <leese@chromium.org>
Commit-Queue: Ionuț Marius Voicilă <ionutvoicila@google.com>
Reviewed-by: Ergün Erdoğmuş <ergunsh@chromium.org>
Reviewed-by: Wolfgang Beyer <wolfi@chromium.org>
Reviewed-by: Philip Pfaffe <pfaffe@chromium.org>

--- a/test/e2e/resources/elements/css-inject-stylesheet-iframe-data.html
+++ b/test/e2e/resources/elements/css-inject-stylesheet-iframe-data.html
@@ -3,21 +3,15 @@
   Use of this source code is governed by a BSD-style license that can be
   found in the LICENSE file.
 -->
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <style type="text/css" media="screen">
-         body { background:green; }
-        </style>
-        <script>
-         function iframeOnload()
-         {
-             window.parent.injectStyleSheet(window);
-             console.log("iframe loaded");
-         }
-        </script>
-    </head>
+  <head>
+    <style type="text/css" media="screen">
+      body {
+        background: green;
+      }
+    </style>
+  </head>
 
-    <body onload="iframeOnload()" id="iframeBody">
-    </body>
+  <body id="iframeBody"></body>
 </html>
