--- a/test/e2e/resources/elements/css-inject-stylesheet.html
+++ b/test/e2e/resources/elements/css-inject-stylesheet.html
@@ -3,8 +3,10 @@
   Use of this source code is governed by a BSD-style license that can be
   found in the LICENSE file.
 -->
-<!doctype html>
+<!DOCTYPE html>
 <style>
- #main { background:blue; }
+  #main {
+    background: blue;
+  }
 </style>
 <div id="main"></div>
