[RPP Observations] Combine interactions that are in the same frame
Bug: 369097528
Change-Id: I819dbd8d3a870f1325265115d61db6095d969ad1
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5938631
Reviewed-by: Paul Irish <paulirish@chromium.org>
Commit-Queue: Adam Raine <asraine@chromium.org>

--- a/test/e2e/resources/performance/interaction-tester.html
+++ b/test/e2e/resources/performance/interaction-tester.html
@@ -20,26 +20,33 @@
         }
       }
 
+      let firstClick = true;
+
       const button = document.getElementById('long-click');
       button.onpointerdown = () => {
-        wait(30);
+        wait(100);
       }
       button.onpointerup = () => {
         wait(100);
       }
       button.onclick = () => {
-        wait(300)
+        if (firstClick) {
+          wait(300);
+          firstClick = false;
+        } else {
+          wait(100);
+        }
       }
 
       const input = document.getElementById('long-type');
       input.onkeydown = () => {
-        wait(30);
+        wait(100);
       }
       input.onkeyup = () => {
         wait(100);
       }
       input.onkeypress = () => {
-        wait(100)
+        wait(100);
       }
     </script>
   </body>
