Make 'Reveal in Summary view' work consistently
My recent change caused the 'Reveal in Summary view' command to fail if
the object to find was not in the first category with its class name.
This CL fixes the problem and adds a regression test.

Bug: 357902505
Change-Id: Ice45060c6fbe30b80c95e0a8d91e16d6d1762606
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5967453
Commit-Queue: Seth Brenith <seth.brenith@microsoft.com>
Reviewed-by: Simon Zünd <szuend@chromium.org>

--- a/test/e2e/resources/memory/duplicated-names.html
+++ b/test/e2e/resources/memory/duplicated-names.html
@@ -19,6 +19,8 @@
   for (let i = 0; i < 30; ++i) {
     holder.d.push(makeObject());
   }
+  holder.a.x = holder.d[0];
+  holder.d[0].x = [1, 2, 3];
   document.getElementById('update').addEventListener('click', function () {
     holder.b = new DuplicatedClassName();
     holder.e = new DuplicatedClassName();
