[cleanup] Consistently use 'Open in Foo panel'.
Instead of the longer 'Reveal in Foo panel', just use 'Open in Foo
panel', which also aligns well with the wording that is otherwise
used (e.g. 'Open in new tab').

Bug: 372873222
Change-Id: Icbd93f5c6bbe8ea011179cbcedb8c306536ed781
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5979752
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Reviewed-by: Peter Müller <petermueller@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/test/e2e/resources/sources/wasm/memory.html
+++ b/test/e2e/resources/sources/wasm/memory.html
@@ -39,7 +39,7 @@
       <li>Reload the page</button></li>
       <li>Breakpoint should hit the new breakpoint</button></li>
       <li>Now look at the Scope in the DevTools and right click on the <code>imports.memory</code></li>
-      <li>Select "Reveal in Memory inspector panel"</li>
+      <li>Select "Open in Memory inspector panel"</li>
       <li>The Linear memory inspector should open</li>
       <li>Inspect memory and navigate</li>
     </ol>
