Fix heap snapshot comparisons when an entire category is removed
I recently introduced a bug in heap snapshot comparisons where if all
instances of a class are removed, the class name shows up as blank in
the comparison view. This change fixes the bug by using the class name
from the "before" state when there is no "after" state.

Bug: 377200307
Change-Id: Ia1c42ea25f90fde0f6a92766f52cb6e66c9ec119
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5992931
Reviewed-by: Simon Zünd <szuend@chromium.org>
Commit-Queue: Seth Brenith <seth.brenith@microsoft.com>

--- a/test/e2e/resources/memory/duplicated-names.html
+++ b/test/e2e/resources/memory/duplicated-names.html
@@ -21,6 +21,11 @@
   }
   holder.a.x = holder.d[0];
   holder.d[0].x = [1, 2, 3];
+  (function () {
+    class DuplicatedClassName {}
+    holder.e = new DuplicatedClassName();
+    holder.f = new DuplicatedClassName();
+  })();
   document.getElementById('update').addEventListener('click', function () {
     holder.b = new DuplicatedClassName();
     holder.e = new DuplicatedClassName();
