[test] Use internal server responses
This code makes a external request which may behave differently
on the bots. Use the internal mapping to make it 3-th party request.
Also remove the timeout as it's smaller then the one defined in
`mocharc.ts`.

Bug: none
Change-Id: I34d1bff458afd6fbcd16a650cfdc18b88b201fc1
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6249177
Commit-Queue: Philip Pfaffe <pfaffe@chromium.org>
Auto-Submit: Nikolay Vitkov <nvitkov@chromium.org>
Reviewed-by: Philip Pfaffe <pfaffe@chromium.org>
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>

--- a/test/e2e/resources/network/third-party-resources.html
+++ b/test/e2e/resources/network/third-party-resources.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <body>
-  <img src="image.svg">
-  <img src="http://example.com/external_image.svg">
+  <iframe src="./hello.html"></iframe>
+  <img src="http://external.test/image.svg" />
 </body>
