[Recorder] Improve test code
Remove some deprecated helpers.
Move files off quirks mode.

Bug: none
Change-Id: Ieb9d421bf2aeeb9d181b86b580164ffec35662af
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6253023
Commit-Queue: Nikolay Vitkov <nvitkov@chromium.org>
Reviewed-by: Alina Varkki <alinavarkki@chromium.org>

--- a/test/e2e/resources/recorder/input.html
+++ b/test/e2e/resources/recorder/input.html
@@ -3,6 +3,7 @@
   Use of this source code is governed by a BSD-style license that can be
   found in the LICENSE file.
 -->
+<!DOCTYPE html>
 <input id="one" />
 <input id="two" />
 <input id="checkbox" type="checkbox" />
@@ -31,21 +32,21 @@
 <input id="contiguous-field-2" type="text" />
 <pre id="log"></pre>
 <script>
-  window.addEventListener('input', (e) => {
+  window.addEventListener('input', e => {
     log.innerText += e.target.id + ':' + e.target.value + '\n';
   });
-  window.addEventListener('mousedown', (e) => {
+  window.addEventListener('mousedown', e => {
     if (e.target.id === 'to-be-modified') {
       e.target.id = 'modified';
     }
   });
   document.getElementById('contiguous-field-1').addEventListener(
     'keydown',
-    (e) => {
+    e => {
       if (e.target.value === 'something') {
         document.getElementById('contiguous-field-2').focus();
       }
     },
-    true
+    true,
   );
 </script>
