--- a/test/e2e/resources/recorder/prerendered.html
+++ b/test/e2e/resources/recorder/prerendered.html
@@ -3,6 +3,7 @@
   Use of this source code is governed by a BSD-style license that can be
   found in the LICENSE file.
 -->
+<!DOCTYPE html>
 <h1>Is this page prerendered?</h1>
 <script>
   function pagePrerendered() {
@@ -13,5 +14,5 @@
   }
   const div = document.createElement('div');
   div.innerText = String(pagePrerendered());
-  document.body.append(div)
+  document.body.append(div);
 </script>
