--- a/test/e2e/resources/recorder/recorder2.html
+++ b/test/e2e/resources/recorder/recorder2.html
@@ -3,6 +3,7 @@
   Use of this source code is governed by a BSD-style license that can be
   found in the LICENSE file.
 -->
+<!DOCTYPE html>
 <h1>Page 2</h1>
 <a href="recorder.html">Back to Page 1</a>
 <button id="test-button">Test button</button>
