--- a/test/e2e/resources/recorder/form.html
+++ b/test/e2e/resources/recorder/form.html
@@ -3,6 +3,7 @@
   Use of this source code is governed by a BSD-style license that can be
   found in the LICENSE file.
 -->
+<!DOCTYPE html>
 <form action="">
   <label for="name">Name:</label>
   <input id="name" name="name" type="text" />
