--- a/test/e2e/resources/recorder/iframe2.html
+++ b/test/e2e/resources/recorder/iframe2.html
@@ -3,5 +3,6 @@
   Use of this source code is governed by a BSD-style license that can be
   found in the LICENSE file.
 -->
+<!DOCTYPE html>
 <h1>iframe 2</h1>
 <a href="iframe1.html">To iframe 1</a>
