--- a/test/e2e/resources/recorder/popup.html
+++ b/test/e2e/resources/recorder/popup.html
@@ -3,5 +3,6 @@
   Use of this source code is governed by a BSD-style license that can be
   found in the LICENSE file.
 -->
+<!DOCTYPE html>
 <h1>Popup</h1>
 <button>Button in Popup</button>
