--- a/test/e2e/resources/recorder/scroll.html
+++ b/test/e2e/resources/recorder/scroll.html
@@ -3,6 +3,7 @@
   Use of this source code is governed by a BSD-style license that can be
   found in the LICENSE file.
 -->
+<!DOCTYPE html>
 <div id="overflow" style="height: 100px; overflow: scroll">
   <div style="height: 200px; background-color: green"></div>
 </div>
