--- a/test/e2e/resources/recorder/shadow-input.html
+++ b/test/e2e/resources/recorder/shadow-input.html
@@ -3,7 +3,7 @@
   Use of this source code is governed by a BSD-style license that can be
   found in the LICENSE file.
 -->
-
+<!DOCTYPE html>
 <script>
   class CustomInputElement extends HTMLElement {
     constructor() {
